--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
     background-color: rgb(222, 238, 222);
 }
 
+img {
+    filter: grayscale(90%);
+}
+
 .main-container {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
@@ -64,6 +68,7 @@ body {
     box-shadow: black;
     max-width: fit-content;
     margin-top: 100px;
+    grid-column: 3/6;
     box-sizing: border-box;
     background-color: grey;
     color: honeydew;
@@ -113,7 +118,7 @@ body {
 .img {
     width: 85px;
     height: 85px;
-    background-color: brown;
+    background-color: rgb(59, 59, 59);
     border-radius: 4px;
     transform: rotate(-20deg);
     margin-top: 20px;
@@ -193,6 +198,7 @@ body {
 .p3 {
     grid-column: 3/4;
     background-color: rgb(99, 97, 97);
+    color: honeydew;
 }
 
 .p1,
@@ -291,5 +297,163 @@ body {
 }
 
 .dark-content {
+    margin-top: 40px;
+    grid-column: 1/4;
+    margin-left: 40px;
+    margin-right: 20px;
+    padding-top: 20px;
+}
+
+.dark-title {
+    padding: 20px 0 20px 0;
+}
+
+.dark-title a {
+    color: black;
+    font-size: 24px;
+}
+
+.dark-lorem {
+    padding-top: 20px;
+}
+
+.see-all {
+    grid-column: 4/7;
+    margin-top: 40px;
+    margin-left: 40px;
+}
+
+.meet-clicks {
+    grid-column: 1/-1;
+    display: flex;
+    flex-direction: column;
+    margin: 40px 20px 0 20px;
+    background-color: rgb(78, 74, 74);
+    color: honeydew;
+    align-items: center;
+    height: 450px;
+}
+
+.meet-date {
+    padding: 60px 0 30px 0;
+}
+
+.meet-title {
+    font-size: 28px;
+    justify-items: center;
+}
+
+.meet-title:hover {
+    cursor: pointer;
+}
+
+.meet-title p {
+    margin-left: 75px;
+}
+
+.meet-content {
+    font-size: 20px;
+    padding: 50px 120px 60px 120px;
+}
+
+.meet-content p {
+    text-align: center;
+}
+
+.meet-btn {
+    padding-bottom: 60px;
+}
+
+.meet-btn button {
+    width: 220px;
+    height: 60px;
+    font-size: 18px;
+    border-radius: 6px;
+}
+
+.person-of-week {
+    grid-column: 1/-1;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 50px;
+}
+
+.top-person {
+    grid-column: 1/3;
     margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.person-pic {
+    grid-column: 1/2;
+    width: 200px;
+    height: 200px;
+    background-color: gray;
+    transform: rotate(-20deg);
+    margin-left: 50px;
+    border-radius: 6px;
+}
+
+.person-pic:hover {
+    transform: rotate(360deg);
+}
+
+.person-title {
+    grid-column: 2/3;
+}
+
+.person-content {
+    grid-column: 2/5;
+    margin-right: 60px;
+    margin-top: -150px;
+}
+
+.middle-person {
+    display: grid;
+    grid-column: 1/3;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(3 1fr);
+    margin-top: 80px;
+}
+
+.pr1 {
+    grid-column: 1/2;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding-left: 30px;
+    padding-top: 120px;
+}
+
+.pr2 {
+    grid-column: 2/3;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding-left: 30px;
+    padding-top: 120px;
+}
+
+.person-pic1 {
+    grid-column: 1/2;
+    width: 100px;
+    height: 100px;
+    border-radius: 4px;
+    background-color: rgb(66, 66, 66);
+    transform: rotate(-15deg);
+    margin-right: 20px;
+    margin-top: 10px;
+}
+
+.person-title1,
+.person-wrote,
+.person-content1 {
+    grid-column: 2/5;
+}
+
+.person-wrote {
+    margin-top: -80px;
+}
+
+.person-content1 {
+    margin-top: -30px;
 }
