--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,10 @@ img {
   font-size: 24px;
 }
 
+.article-content a {
+  color: honeydew;
+}
+
 .pttw h2 a {
   color: black;
 }
@@ -339,6 +343,11 @@ img {
 
 .dark-lorem {
   padding-top: 20px;
+}
+
+.smashing-already p a,
+.smashing-para p a {
+  color: black;
 }
 
 .see-all {
